# summarization

./: .gitignore  README.org  pyproject.toml
summarization_llm/: .gitignore  Makefile  data.py  evaluation.py  gen_xsum_val.py  latest_bertik.py  llama.py  llama_data.py  model.py  modeling_llama.py  modelmodule.py  scratch.ipynb  t5.py  t5_data.py  train.py
summarization_llm/configs/: example.yaml  t5_example.yaml
summarization_llm/tests/: data_tests.py  model_tests.py  pipeline_tests.py
